--- a/css/hbs_style.css
+++ b/css/hbs_style.css
@@ -846,7 +846,7 @@ ol.bhs_pdlist_sbs li:hover {
 }
 ol.bhs_pdlist_sbs li img {
     display:inline-block;
-    margin-top:0;
+    margin-top:-214px;
     margin-left: 0;
     height: 130px;
     width: 130px;
@@ -888,4 +888,130 @@ ol.bhs_pdlist_sbs li span.bhs_pd_cat {
 }
 span.cat_shop {
     background: #ad1728;
+}
+/*详情内容*/
+#bhs_page_gunpla_detail {
+    background: #fff;
+    padding: 0;
+    margin: 0 auto 26px auto;
+}
+#bhs_gallery {
+    margin: 0 0 18px 0;
+    padding: 0;
+    overflow: hidden;
+    width: 720px;
+}
+#bhs_gallery #bhs_gallery_main {
+    float: left;
+    width: 475px;
+}
+.bx-wrapper {
+    position: relative;
+    max-width: 100%;
+    margin: 0px auto;
+    padding: 0;
+}
+.bx-wrapper .bx-viewport {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    height: 475px;
+    background: url("../img/detail_3244_1.jpg");
+    background-size: cover;
+}
+#bhs_gallery #bhs_gallery_thumbs {
+    float: right;
+    height: 320px;
+    list-style: none;
+    margin: 0 0 13px 0;
+    padding: 0;
+    width: 240px;
+}
+#bhs_gallery #bhs_gallery_thumbs li {
+    background-color: #EEE;
+    display: block;
+    float: left;
+    height: 75px;
+    margin: 0 0 5px 5px;
+    overflow: hidden;
+    padding: 0;
+    width: 75px;
+}
+#bhs_gallery #bhs_gallery_thumbs li a {
+    display: table-cell;
+    height: 75px;
+    line-height: 75px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    vertical-align: top;
+    width: 75px;
+}
+#bhs_gallery #bhs_gallery_thumbs li a img {
+    border: 1px solid #e1e1e1;
+    display: inline;
+    margin: 0;
+    height: 73px;
+    width: 73px;
+    padding: 0;
+    text-indent: 0;
+    vertical-align: top;
+}
+#bhs_gallery #bhs_pd_ontline {
+    float: right;
+    list-style: none;
+    margin: 0;
+    padding: 0 0 0 5px;
+    width: 236px;
+}
+#bhs_gallery #bhs_pd_ontline .bhs_sale_table {
+    border-collapse: separate;
+    border: 1px solid #bfbfbf;
+    border-spacing: 0;
+    line-height: 1.5;
+    margin: 0 0 8px 0;
+    text-align: left;
+}
+#bhs_gallery #bhs_pd_ontline .bhs_sale_table th {
+    background: #f2f2f2;
+    border-bottom: none;
+    font-size: 13px;
+    line-height: 1.3;
+    padding: 10px 0;
+    text-align: center;
+    vertical-align: top;
+    width: 74px;
+    box-sizing: border-box;
+}
+#bhs_gallery #bhs_pd_ontline .bhs_sale_table td {
+    border-bottom: none;
+    padding: 10px;
+    vertical-align: top;
+    width: 162px;
+    box-sizing: border-box;
+}
+#bhs_gallery #bhs_pd_ontline .bhs_sale_table td span {
+    color: #e3162f;
+}
+.bhs_detail_explain {
+    margin: 0 auto 20px auto;
+    padding: 0 10px;
+    width: 720px;
+    box-sizing: border-box;
+}
+.bhs_sale_notice {
+    margin: 0 0 20px 0;
+    padding: 0;
+}
+.bhs_sale_notice ul {
+    background: #f6f6f6;
+    border: 1px solid #e1e1e1;
+    margin: 0;
+    padding: 14px;
+}
+.bhs_sale_notice ul li {
+    font-size: 12px;
+    line-height: 1.3;
+    margin: 0 0 3px 0;
+    padding: 0;
 }
