--- a/css/hbs_style.css
+++ b/css/hbs_style.css
@@ -36,6 +36,49 @@ ul,ol,li{
     margin-top: -15px;
     height:20rem;
 }
+/*加载*/
+#loading>div {
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    z-index: 50;
+    transition: 1s;
+}
+#loading div:nth-of-type(1) {
+    background: url("../img/common/1920_1long.png") no-repeat right top;
+    right: 50%;
+    animation: trans1 1.3s 1s forwards
+}
+#loading div:nth-of-type(2) {
+    background: url("../img/common/1920_2long.png");
+    right: 0;
+    animation: trans2 1.3s 1s forwards
+}
+#loading span {
+    width: 2px;
+    height: 0;
+    background: #2ca4f0;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -2px;
+    z-index: 60;
+    transition: .8s;
+    animation: 1s trans0;
+}
+@keyframes trans0 {
+    0% {height: 0;}
+    100% {height: 100%}
+}
+@keyframes trans1 {
+    0% {right: 50%}
+    100% {right: 100%}
+}
+@keyframes trans2 {
+    0% {width: 50%}
+    100% {width: 0%}
+}
 /*主体*/
 #bhs_contents {
     margin: 0 auto;
