--- a/public/css/hbs_style.css
+++ b/public/css/hbs_style.css
@@ -560,7 +560,7 @@ h2.bhs_main_title span {
     background: #fff;
     border: 1px solid #fff;
     display: inline-block;
-    margin: 0 0 36px 0;
+    margin: 0 5px 36px 5px;
     padding: 0;
     vertical-align: top;
     width: 172px;
@@ -1182,7 +1182,7 @@ span.cat_shop {
     box-sizing: border-box;
 }
 #bhs_gallery #bhs_pd_ontline .bhs_sale_table td {
-    border-bottom: none;
+    /*border-bottom: none;*/
     padding: 10px;
     vertical-align: top;
     width: 162px;
